more structure and publish workflow

--- a/docker-content/tag-der-technik/.vscode/settings.json
+++ b/docker-content/tag-der-technik/.vscode/settings.json
@@ -10,5 +10,7 @@
         "**/*.synctex(busy)": true,
         "**/*.out": true,
         "**/__pycache__": true,
+        "**/.vscode": true,
+        "**/acl_natbib.bst": true,
     }
 }
